kubernetes/spark-master-deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: spark-master
  namespace: spark
spec:
  replicas: 1
  selector:
    matchLabels:
      component: spark-master
  template:
    metadata:
      labels:
        component: spark-master
    spec:
      hostname: spark-master
      containers:
        - name: spark-master
          image: gluckzhang/spark-hadoop:2.4.3
          command: ["/spark-master.sh"]
          ports:
            - containerPort: 7077
            - containerPort: 8080
          resources:
            requests:
              # cpu: "100m"
              memory: "1536M"
            limits:
              # cpu: "200m"
              memory: "1536M"
