kubernetes/spark-worker-deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: spark-worker
  namespace: spark
spec:
  replicas: 2
  selector:
    matchLabels:
      component: spark-worker
  template:
    metadata:
      labels:
        component: spark-worker
    spec:
      containers:
        - name: spark-worker
          image: gluckzhang/spark-hadoop:2.4.3
          command: ["/spark-worker.sh"]
          ports:
            - containerPort: 8081
          resources:
            requests:
              # cpu: "100m"
              memory: "2048M"
            limits:
              # cpu: "200m"
              memory: "2048M"
