kubernetes/spark-master-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spark-master-ingress
  namespace: spark
spec:
  rules:
  - host: spark.kth-assert.net
    http:
      paths:
      - path: /
        backend:
          serviceName: spark-master
          servicePort: 8080
